Added tests for the "multiple resources" scenario and did some bugfixing. #7 #8